plugins {
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
}
group = 'io.spring.sagan'
version = "1.0.0-SNAPSHOT"
sourceCompatibility = 21

repositories {
	mavenCentral()
}

bootJar {
	requiresUnpack '**/jruby-complete-*.jar'
	requiresUnpack '**/asciidoctorj-*.jar'
}

dependencies {
	implementation 'org.pegdown:pegdown:1.6.0'
	implementation('org.asciidoctor:asciidoctorj:2.5.3') {
		exclude group: 'org.jruby'
	}
	implementation 'org.jruby:jruby-complete:9.3.4.0'
	implementation 'org.jsoup:jsoup:1.14.3'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

test {
	useJUnitPlatform()
	jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
			'--add-opens', 'java.base/java.util=ALL-UNNAMED'
}

